--- a/src/app/dashboard/home/home.page.html
+++ b/src/app/dashboard/home/home.page.html
@@ -14,24 +14,31 @@
   <ion-card class="welcome-card">
     <ion-img src="/assets/shapes.svg"></ion-img>
     <ion-card-header>
-      <ion-card-subtitle>Get Started</ion-card-subtitle>
-      <ion-card-title>Welcome to Ionic</ion-card-title>
+      <ion-card-subtitle>{{ estudiante.carrera.descripcion }}</ion-card-subtitle>
+      <ion-card-title>{{ estudiante.nombre }} {{ estudiante.apellido }}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p>Now that your app has been created, you'll want to start building out features and components. Check out some
-        of the resources below for next steps.</p>
+      <p>Código: {{ estudiante.codigo }}</p>
     </ion-card-content>
   </ion-card>
 
-  <ion-list lines="none">
-    <ion-list-header>
-      <ion-label>Mis proyectos</ion-label>
-    </ion-list-header>
-    <ion-item href="https://ionicframework.com/docs/" *ngFor="let proyecto of estudiante.proyectos">
-      <ion-icon slot="start" color="medium" name="book"></ion-icon>
-      <ion-label>{{proyecto.Nombre}}</ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Mis proyectos</ion-card-title>
+      <ion-card-subtitle>Cantidad: {{ estudiante.proyectos.length }}</ion-card-subtitle>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-item [routerLink]="['/dashboard','detalle-proyecto',proyecto.codigo]" class="activated" *ngFor="let proyecto of estudiante.proyectos"  lines="none">
+        <ion-icon *ngIf="proyecto.avanceProyecto=='Ante proyecto'" name="bonfire" slot="start" color="danger"></ion-icon>
+        <ion-icon *ngIf="proyecto.avanceProyecto=='Proyecto'" name="boat" slot="start" color="tertiary"></ion-icon>
+        <ion-icon *ngIf="proyecto.avanceProyecto=='Trabajo de grado'" name="analytics" slot="start" color="warning"></ion-icon>
+        <ion-icon *ngIf="proyecto.avanceProyecto=='Aceptado'" name="school" slot="start" color="success"></ion-icon>
+        <ion-label>{{ proyecto.nombre }}</ion-label>
+        <p><small>{{ proyecto.avanceProyecto }}</small></p>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button routerLink="/dashboard/proyectos" routerDirection="forward">
