--- a/src/app/dashboard/proyectos/proyectos.page.html
+++ b/src/app/dashboard/proyectos/proyectos.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/dashboard/documentos"></ion-back-button>
+      <ion-back-button defaultHref="/dashboard/home"></ion-back-button>
     </ion-buttons>
     <ion-title>Nuevo proyecto</ion-title>
   </ion-toolbar>
